# via

./: .gitignore  CMakeLists.txt  CTestCustom.cmake  LICENSE  README.md  SYNC_SYSTEM_WORKLOG.md
.github/workflows/: build.yml  release.yml  todo-to-issue.yml
archive/: InitialSync.cpp  InitialSync.h  TestInitialSync.cpp  dataflow.md
docs/: API.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md  todo-to-issue.yml
docs/systems/: API_CLIENT.md  AUTHENTICATION.md  FUSE_FILESYSTEM.md  SYNC_ENGINE.md  USER_INTERFACE.md  UTILITIES.md
res/: resources.qrc  via.desktop
scripts/: make-appimage.sh
src/: main.cpp
src/api/: DriveChange.cpp  DriveChange.h  DriveFile.cpp  DriveFile.h  GoogleDriveClient.cpp  GoogleDriveClient.h
src/auth/: GoogleAuthManager.cpp  GoogleAuthManager.h  TokenStorage.cpp  TokenStorage.h
src/fuse/: DirtySyncWorker.cpp  DirtySyncWorker.h  FileCache.cpp  FileCache.h  FuseDriver.cpp  FuseDriver.h  MetadataCache.cpp  MetadataCache.h  MetadataRefreshWorker.cpp  MetadataRefreshWorker.h
src/sync/: ChangeProcessor.cpp  ChangeProcessor.h  ChangeQueue.cpp  ChangeQueue.h  FileFilter.cpp  FileFilter.h  FullSync.cpp  FullSync.h  LocalChangeWatcher.cpp  LocalChangeWatcher.h  RemoteChangeWatcher.cpp  RemoteChangeWatcher.h  SyncActionQueue.cpp  SyncActionQueue.h  SyncActionThread.cpp  SyncActionThread.h  SyncDatabase.cpp  SyncDatabase.h  SyncSettings.cpp  SyncSettings.h
src/ui/: ConflictDialog.cpp  ConflictDialog.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  SystemTrayManager.cpp  SystemTrayManager.h
src/utils/: AutostartManager.h  FileInUseChecker.cpp  FileInUseChecker.h  LogManager.cpp  LogManager.h  NotificationManager.cpp  NotificationManager.h  PathUtils.h  ThemeHelper.h  UpdateChecker.h
tests/: README.md
tests/auth/: TestAccountSwitch.cpp  TestTokenRefresh.cpp
tests/fuse/: TestDirtySyncWorker.cpp  TestFileCache.cpp  TestMetadataCache.cpp
tests/sync/: TestChangeProcessor.cpp  TestChangeQueue.cpp  TestFullSync.cpp  TestLocalChangeWatcher.cpp  TestRemoteChangeWatcher.cpp  TestSyncActionQueue.cpp  TestSyncActionThread.cpp  TestSyncDatabase.cpp
